# IT-BPM-Firstsource-

./: .gitignore  Dockerfile  Dockerfile.frontend  MONITORING.md  PRESENTATION.md  PROJECT_SUMMARY.md  README.md  SECURITY.md  TESTING.md  docker-compose.dev.yml  docker-compose.yml  env.example  jest.config.js  nginx.conf  package.json  playwright.config.ts  pytest.ini  requirements.txt  tailwind.config.js
.github/workflows/: ci.yml
app/: globals.css  layout.tsx
backend/: Dockerfile  README.md  alembic.ini  config.py  database.py  main.py  models.py  pyproject.toml  pytest.ini  requirements-monitoring.txt  schemas.py
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py  0002_precise_provider_model.py  0003_validation_models.py
backend/api/: metrics.py  validation.py
backend/auth/: audit_logger.py  jwt_handler.py  pii_handler.py
backend/config/: env.example  environment.py
backend/connectors/: base.py  google_places.py  google_places_connector.py  npi.py  npi_connector.py  robots_compliance.py  state_board_connector.py  state_board_mock.py  validation_rules.py
backend/docs/: GOOGLE_PLACES_CONNECTOR.md  NPI_CONNECTOR.md  OCR_PIPELINE.md  PROVIDER_MODEL.md  STATE_BOARD_MOCK_CONNECTOR.md
backend/examples/: google_places_connector_example.py  npi_connector_example.py  ocr_pipeline_example.py  sample_extracted_json.json  security_examples.py  state_board_mock_connector_example.py  validation_api_curl_examples.md
backend/middleware/: logging_middleware.py  security.py  security_middleware.py
backend/models/: __init__.py  provider.py  validation.py
backend/monitoring/: alerting.py  metrics.py
backend/pipelines/: ocr.py
backend/routers/: dashboard.py  health.py  providers.py  validation.py
backend/schemas/: provider.py
backend/scripts/: demo_provider_model.py  generate_demo_data.py  generate_pdf_documents.py  generate_precise_providers.py  migrate_database.py  run_worker.py
backend/services/: metrics_service.py  provider_service.py  retention_manager.py  validation_report_generator.py  validation_service.py  validator.py
backend/tests/: conftest.py  test_google_places_connector.py  test_npi_connector.py  test_ocr_pipeline.py  test_provider_model.py  test_providers.py  test_state_board_mock_connector.py  test_validation.py  test_validation_orchestrator.py  test_validation_rules.py
backend/tests/fuzz/: test_ocr_fuzz.py
backend/tests/integration/: test_validation_integration.py
backend/tests/performance/: test_validation_performance.py
backend/tests/unit/: test_connectors.py  test_orchestrator.py
backend/utils/: csv_processor.py  idempotency.py  rate_limiter.py
backend/workers/: queue_manager.py  validation_worker.py
components/: ProviderList.tsx  Settings.tsx  ValidationQueue.tsx
data/: README.md  demo_providers.csv  generate_demo_csv.py  generate_pdf_images.py
data/pdf_images/: metadata.json
frontend/: README.md  jest.setup.js  next.config.js  package.json  tailwind.config.js
frontend/app/: globals.css  layout.tsx  page.tsx  providers.tsx
frontend/app/providers/: page.tsx
frontend/app/providers/[id]/: page.tsx
frontend/app/review/: page.tsx
frontend/components/: Dashboard.tsx
frontend/components/pages/: Dashboard.tsx  ManualReviewQueue.tsx  ProviderDetailPage.tsx  ProvidersPage.tsx
frontend/components/ui/: BulkActionToolbar.tsx  ConfidenceBadge.tsx  ManualReviewModal.tsx  PrivacyMask.tsx  SourceChip.tsx  Timeline.tsx
frontend/tests/: jest.config.js  jest.setup.js
frontend/tests/components/: ConfidenceBadge.test.tsx  PrivacyMask.test.tsx  SourceChip.test.tsx
frontend/tests/components/__snapshots__/: ConfidenceBadge.test.tsx.snap
frontend/tests/e2e/: validation-flows.spec.ts
monitoring/: docker-compose.monitoring.yml
monitoring/alertmanager/: alertmanager.yml
monitoring/grafana/dashboard-screenshots/: README.md
monitoring/grafana/dashboards/: provider-validation-dashboard.json
monitoring/prometheus/: prometheus.yml
monitoring/prometheus/rules/: provider-validation-alerts.yml
scripts/: run_tests.bat  run_tests.sh  setup_monitoring.sh
tests/: conftest.py  test_connectors.py
