[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "provider-validation-backend"
version = "1.0.0"
description = "Backend API for Provider Data Validation & Directory Management System"
authors = [
    {name = "Adarsh", email = "adarsh8081@users.noreply.github.com"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Healthcare Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Framework :: FastAPI",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
]

dependencies = [
    # FastAPI Backend Dependencies
    "fastapi==0.104.1",
    "uvicorn[standard]==0.24.0",
    "pydantic==2.5.0",
    "pydantic-settings==2.1.0",
    "sqlalchemy==2.0.23",
    "alembic==1.13.1",
    "psycopg2-binary==2.9.9",
    "asyncpg==0.29.0",
    
    # Database
    "supabase==2.3.0",
    
    # Job Queue & Workers
    "rq==1.15.1",
    "redis==5.0.1",
    "prefect==2.14.15",
    
    # HTTP Clients & APIs
    "httpx==0.25.2",
    "aiohttp==3.9.1",
    "requests==2.31.0",
    
    # Data Processing
    "pandas==2.1.4",
    "numpy==1.25.2",
    "python-multipart==0.0.6",
    
    # PDF Processing
    "PyPDF2==3.0.1",
    "pdfplumber==0.10.3",
    "pytesseract==0.3.10",
    
    # Security & Validation
    "cryptography==41.0.8",
    "python-jose[cryptography]==3.3.0",
    "passlib[bcrypt]==1.7.4",
    
    # Logging & Monitoring
    "structlog==23.2.0",
    "python-json-logger==2.0.7",
]

[project.optional-dependencies]
dev = [
    "pytest==7.4.3",
    "pytest-asyncio==0.21.1",
    "pytest-cov==4.1.0",
    "black==23.11.0",
    "isort==5.12.0",
    "flake8==6.1.0",
    "mypy==1.7.1",
    "python-dotenv==1.0.0",
]

[project.urls]
Homepage = "https://github.com/adarsh8081/IT-BPM-Firstsource-"
Repository = "https://github.com/adarsh8081/IT-BPM-Firstsource-"
Documentation = "https://github.com/adarsh8081/IT-BPM-Firstsource-/blob/main/README.md"
Issues = "https://github.com/adarsh8081/IT-BPM-Firstsource-/issues"

[project.scripts]
provider-validation = "backend.main:main"
validation-worker = "backend.workers.validation_worker:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["backend*"]

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["backend"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "redis.*",
    "rq.*",
    "supabase.*",
    "PyPDF2.*",
    "pdfplumber.*",
    "pytesseract.*",
    "passlib.*",
    "jose.*",
    "structlog.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
    "--disable-warnings",
    "--cov=backend",
    "--cov-report=term-missing",
    "--cov-report=html:htmlcov",
    "--cov-report=xml",
    "--cov-fail-under=70",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]
